--- a/.github/workflows/image-pull.yaml
+++ b/.github/workflows/image-pull.yaml
@@ -89,7 +89,7 @@ jobs:
     if: ${{ needs.diff.outputs.images != '[]' }}
     needs: diff
     name: Image Pull - Pull Images
-    runs-on: home-ops-runner
+    runs-on: vrtx-cluster-runner
     strategy:
       matrix:
         image: ${{ fromJSON(needs.diff.outputs.images) }}
